| Summary: | ASTERISK-27743: Generic PLC doesn't work if the 2 codecs on a channel are equal | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2018-03-16 10:24:42 | Date Closed: | 2018-03-20 11:05:14 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/Channels |
| Versions: | 13.20.0 GIT 15.3.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If the two formats on a channel are equal, we don't transcode and since
the generic plc needs slin to work, it doesn't get invoked. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2018-03-20 11:05:14.841-0500 Change 8553 merged by Jenkins2: channel.c: Allow generic plc then channel formats are equal [https://gerrit.asterisk.org/8553|https://gerrit.asterisk.org/8553] By: Friendly Automation (friendly-automation) 2018-03-20 11:18:28.877-0500 Change 8555 merged by Jenkins2: channel.c: Allow generic plc then channel formats are equal [https://gerrit.asterisk.org/8555|https://gerrit.asterisk.org/8555] By: Friendly Automation (friendly-automation) 2018-03-20 11:21:14.912-0500 Change 8554 merged by Joshua Colp: channel.c: Allow generic plc then channel formats are equal [https://gerrit.asterisk.org/8554|https://gerrit.asterisk.org/8554] By: Friendly Automation (friendly-automation) 2018-03-21 18:15:41.050-0500 Change 8622 merged by Joshua Colp: channel.c: Allow generic plc then channel formats are equal [https://gerrit.asterisk.org/8622|https://gerrit.asterisk.org/8622] | ||